# eventlog-tools

./: .gitignore  LICENSE.md  README.md  dune-project  eventlog-tools.opam
.github/workflows/: main.yml
bin_common/: common.ml  dune
fuzz/: dune  fuzz.ml
lib/: consts.ml  dune  eventlog.ml  eventlog.mli  parser.ml  traces.ml  types.ml  types.mli
test/: 4.11.1.expected  4.12.1.expected  4.13.1.expected  dune  reference.ml  test.ml  test_parser.ml
test/assets/: be.eventlog  simple.eventlog
test/reference/: 4.11.1.reference  4.12.1.reference  4.13.1.reference
