opam-version: "2.0"
name:         "eventlog-tools"
maintainer:   "Enguerrand Decorne <decorne.en@gmail.com>"
authors:      "Enguerrand Decorne <decorne.en@gmail.com>"
homepage:     "https://github.com/Engil/ocaml-eventlog-tools"
bug-reports:  "https://github.com/Engil/ocaml-eventlog-tools/issues"
dev-repo:     "git+https://github.com/Engil/ocaml-eventlog-tools.git"
doc:          "https://engil.github.io/ocaml-eventlog-tools/"
license:      "MIT"
synopsis:     "Library to parse and convert OCaml instrumented runtime's traces"
description: """WIP
"""

build: [
  [ "dune" "subst" ]
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml"      {>= "4.06.0"}
  "dune"       {build}
  "base-bytes"
  "base-bigarray"
  "base-unix"
  "angstrom"
  "rresult"
  "fmt"
  "cmdliner"
  "fpath"
  "bos"
]
