opam-version: "2.0"
name:         "eventlog-tools"
maintainer:   "Enguerrand Decorne <decorne.en@gmail.com>"
authors:      "Enguerrand Decorne <decorne.en@gmail.com>"
homepage:     "https://github.com/ocaml-multicore/eventlog-tools"
bug-reports:  "https://github.com/ocaml-multicore/eventlog-tools/issues"
dev-repo:     "git+https://github.com/ocaml-multicore/eventlog-tools.git"
doc:          "https://ocaml-multicore.github.io/eventlog-tools/"
license:      "ISC"
synopsis:     "Parser and tools for the runtime tracing in OCaml 4.11 and higher"
description: """
This library provides a set of tools and a pure OCaml decoder implementation to
allow reading and convertions of traces generated through the instrumented
runtime available from OCaml 4.11.
The decoder interface provides a streaming parser library, and the available
tools includes a simple command line report utility and a converter to
Google Chrome's Catapult format.
"""

build: [
  [ "dune" "subst" ]
  [
    "dune" "build" "-p" name "-j" jobs
    "@install"
    "@runtest" {with-test}
  ]
]

depends: [
  "ocaml"      {>= "4.11.0"}
  "dune"       {>= "2.7"}
  "alcotest"   {with-test}
  "base-bytes"
  "base-bigarray"
  "base-unix"
  "bigstringaf"
  "angstrom"
  "rresult"
  "jsonm"
  "fmt"
  "cmdliner"
  "fpath"
  "bos"
  "owl-base"
  "interval-map"
]
